// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayListItem renders correctly when current 1`] = `
<div>
  <div
    class="flex flex-col justify-center p-4 relative  bg-white hover:bg-light-yellow transition-colors duration-300 cursor-pointer"
  >
    <div
      class="flex flex-col"
    >
      <p
        class="text-sm font-medium text-slate-500"
      >
        Painted in Blue
      </p>
      <p
        class="text-sm font-medium text-black"
      >
        Soul Canvas
      </p>
    </div>
    <p
      class="absolute right-0 top-1/2 transform -translate-y-1/2 text-sm font-medium text-slate-500"
    >
      5:55
    </p>
  </div>
</div>
`;

exports[`PlayListItem renders correctly when not current 1`] = `
<div>
  <div
    class="flex flex-col justify-center p-4 relative  bg-white hover:bg-light-yellow transition-colors duration-300 cursor-pointer"
  >
    <div
      class="flex flex-col"
    >
      <p
        class="text-sm font-medium text-slate-500"
      >
        Tidal Drift
      </p>
      <p
        class="text-sm font-medium text-black"
      >
        Echoes of the Sea
      </p>
    </div>
    <p
      class="absolute right-0 top-1/2 transform -translate-y-1/2 text-sm font-medium text-slate-500"
    >
      8:02
    </p>
  </div>
</div>
`;
